--- a/adam.ipynb
+++ b/adam.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,108 @@
     "from yfpy.models import Scoreboard, Matchup, YahooFantasyObject\n",
     "from yahoo_oauth import OAuth2\n",
     "import xml.etree.ElementTree as ET\n",
-    "from collections import defaultdict\n"
+    "from collections import defaultdict\n",
+    "from query import Query\n",
+    "from pprint import pprint\n",
+    "from metrics import Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE_URL = \"https://fantasysports.yahooapis.com/fantasy/v2\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use last season stats so there aren't any spoilers\n",
+    "current = False\n",
+    "league_id = \"67269\" if current else \"97108\"\n",
+    "game_id = 453 if current else 427\n",
+    "league_key = f\"{game_id}.l.{league_id}\"\n",
+    "query = await Query.create(league_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Most Picked-Up/Dropped Players are...\n",
+      "1. Matt Boldy (7)\n",
+      "2. Ukko-Pekka Luukkonen (6)\n",
+      "3. Darnell Nurse (5)\n",
+      "4. Jakob Chychrun (5)\n",
+      "5. Jacob Markstrom (5)\n",
+      "6. Brent Burns (5)\n",
+      "7. Claude Giroux (5)\n",
+      "8. Tyler Toffoli (4)\n",
+      "9. Ilya Samsonov (4)\n",
+      "10. Drake Batherson (4)\n",
+      "11. Josh Manson (4)\n",
+      "12. Connor Bedard (4)\n",
+      "13. Logan Thompson (4)\n",
+      "14. Jeff Skinner (4)\n",
+      "15. Tom Wilson (3)\n",
+      "16. Filip Gustavsson (3)\n",
+      "17. Joey Daccord (3)\n",
+      "18. Boone Jenner (3)\n",
+      "19. Alex Lyon (3)\n",
+      "20. Joseph Woll (3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Mike Sillinger Award\n",
+    "Evaluated by who was dropped the most\n",
+    "Prints Top 10\n",
+    "'''\n",
+    "async def get_most_dropped_players(self):\n",
+    "    url = f\"/league/{self.query.league_key}/transactions\"\n",
+    "    response = await self.query.get_response(url)\n",
+    "    transactions = response['league']['transactions']\n",
+    "    # pprint(transactions)\n",
+    "    drops = {}\n",
+    "    missed = 0\n",
+    "    for transaction in transactions:\n",
+    "        if transaction['type'] == 'drop' and transaction['status'] == 'successful':\n",
+    "            try:\n",
+    "                drops[transaction['players'][0]['player_key']][1] += 1\n",
+    "            except:\n",
+    "                drops[transaction['players'][0]['player_key']] = [transaction['players'][0]['name']['full'], 1]\n",
+    "        elif transaction['type'] == 'add/drop' and transaction['status'] == 'successful':\n",
+    "            try:\n",
+    "                drops[transaction['players'][1]['player_key']][1] += 1\n",
+    "            except:\n",
+    "                drops[transaction['players'][1]['player_key']] = [transaction['players'][1]['name']['full'], 1]\n",
+    "\n",
+    "    drops = dict(sorted(drops.items(), key=lambda item: item[1][1], reverse=True))\n",
+    "\n",
+    "    top_x = 20\n",
+    "    print('The Most Picked-Up/Dropped Players are...')\n",
+    "    for i in range(top_x):\n",
+    "        print(f'{i+1}. {list(drops.values())[i][0]} ({str(list(drops.values())[i][1])})')\n",
+    "\n",
+    "    \n",
+    "    return \n",
+    "\n",
+    "Metrics.get_most_dropped_players = get_most_dropped_players\n",
+    "\n",
+    "metrics = Metrics(query)\n",
+    "\n",
+    "await metrics.get_most_dropped_players()"
    ]
   },
   {
